fixed modal size on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,5 +168,6 @@ label {
   .modal__container {
     text-align: center;
     margin-top: 300px;
+    width: 400px;
   }
 }
